syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
option csharp_namespace = "Videa.Avail.Service.Proto.Types";

service AvailService {
	rpc GetAvail (GetAvailRequest) returns (GetAvailResponse) {}
}
message GetAvailRequest {
}
message GetAvailResponse {
}

